--- a/views/pasuta_detail.ejs
+++ b/views/pasuta_detail.ejs
@@ -10,11 +10,11 @@
     <tr><th>項目</th><th>データ</th></tr>
     <tr><td>ID</td><td><%= data.id %></td></tr>
     <tr><td>種類名</td><td><%= data.name %></td></tr>
-    <tr><td>温度</td><td><%= data.temp %></td></tr>
-    <tr><td>特徴</td><td><%= data.s %></td></tr>
+    <tr><td>断面</td><td><%= data.temp %></td></tr>
+    <tr><td>おすすめの食べ方</td><td><%= data.s %></td></tr>
   </table>
-  <a href="/udon/edit/<%= id %>">編集</a>
-  <a href="/udon/delete/<%= id %>">削除</a>
-  <a href="/udon">うどんの種類一覧に戻る</a>
+  <a href="/pasuta/edit/<%= id %>">編集</a>
+  <a href="/pasuta/delete/<%= id %>">削除</a>
+  <a href="/pasuta">パスタの種類一覧に戻る</a>
 </body>
 </html>
