--- a/views/top.ejs
+++ b/views/top.ejs
@@ -7,9 +7,9 @@
 <body>
   <h1>メニュー選択</h1>
   <ul>
-    <li><a href="/udon">うどん管理</a></li>
-    <li><a href="/soba">そば管理</a></li>
-    <li><a href="/ramen">ラーメン管理</a></li>
+    <li><a href="/udon">うどん一覧</a></li>
+    <li><a href="/ramen">ラーメン一覧</a></li>
+    <li><a href="/pasuta">パスタ一覧</a></li>
   </ul>
 </body>
 </html>
