--- a/views/pasuta_edit.ejs
+++ b/views/pasuta_edit.ejs
@@ -11,7 +11,7 @@
       <tr><th>項目</th><th>データ</th></tr>
       <tr><td>種類名</td><td><input type="text" name="name" value="<%= data.name %>"></td></tr>
       <tr><td>断面</td><td><input type="text" name="temp" value="<%= data.temp %>"></td></tr>
-      <tr><td>おすすめの食べ方</td><td><input type="text" name="s" value="<%= data.s %>"></td></tr>
+      <tr><td>おすすめの食べ方</td><td><input type="s" name="s" value="<%= data.s %>"></td></tr>
     </table>
     <input type="submit" values="登録">
   </form>
